--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ ul>li{
     position: relative;
     padding: 4px;
 }
+li{
+    display: flex;
+    align-items: center;
+}
 li>p{
     display: inline-block;
     font-size: 20px;
@@ -77,7 +81,12 @@ li:nth-child(2n){
 li:hover{
     background-color: rgb(188, 186, 190);
 }
-li>button{
+.button-container {
+    margin-left: auto;
+    display: flex;
+    gap: 4px;
+}
+li button{
     float: inline-end;
     height: 30px;
     margin: 0px 4px;
@@ -89,10 +98,10 @@ li>button{
     color: white;
     display: none;
 }
-li>button:hover{
+li button:hover{
     transform: scale(1.05);
 }
-li:hover>button{
+li:hover button{
     display: inline;
 }
 .delete-btn:hover{
@@ -103,6 +112,9 @@ li:hover>button{
 }
 .complete-btn:active{
     background-color: rgb(155, 223, 19);
+}
+.bi-x-lg:hover{       /*It is for toggle button, when task is done, and you want to undo it*/
+    color: darkred;
 }
 .delete-btn:active{
     background-color: rgb(214, 59, 59);
